--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,15 @@
-html{
+html {
     box-sizing: border-box;
 }
-*, ::after, ::before{
+
+*, ::after, ::before {
     box-sizing: inherit;
 }
 
-.body{
+.body {
     max-width: 1000px;
-    background-color: rgb(218, 218, 218);
+    background-color: #eee;
     font-family: 'Lato', sans-serif;
     font-family: 'Poppins', sans-serif;
-    margin: 6%;
-    display:grid;
-    grid-gap:10px;   
+    margin: 0 auto;
 }
