--- a/css/style.css
+++ b/css/style.css
@@ -12,4 +12,5 @@ html {
     font-family: 'Lato', sans-serif;
     font-family: 'Poppins', sans-serif;
     margin: 0 auto;
+    word-break: break-word;
 }
