--- a/css/form.css
+++ b/css/form.css
@@ -2,8 +2,9 @@
     display: grid;
     grid-template-columns: 1fr auto;
     gap: 20px;
-    padding: 10px;
+    padding: 20px;
     margin: 0px;
+    border-bottom: 20px solid #eee;
 }
 
 @media (max-width: 767px) {
