--- a/css/style.css
+++ b/css/style.css
@@ -7,10 +7,15 @@ html {
 }
 
 .body {
-    max-width: 1000px;
+    max-width: 860px;
     background-color: #eee;
-    font-family: 'Lato', sans-serif;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     margin: 0 auto;
     word-break: break-word;
+}
+
+@media (max-width: 767px) {
+    .body {
+        padding: 10px;
+    }
 }
